Mon Aug 20 00:10:49 BST 2007  Colin Watson  <cjwatson@debian.org>

	Discard stderr from formatting processes when outputting to a pager,
	to avoid visual corruption from any error messages (thanks, Vincent
	Lefevre; Debian bug #372939).

	* lib/pipeline.h (struct command): Add discard_err member.
	* lib/pipeline.c (command_new, command_dup): Initialise discard_err.
	  (pipeline_start): Redirect the child's stderr to /dev/null if
	  discard_err is set.
	* src/man.c (discard_stderr): New function to set discard_err on all
	  commands in a pipeline.
	  (format_display_and_save, format_display): Use it on format_cmd.
	* docs/NEWS: Document this.

Sun Aug 19 21:04:24 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/descriptions.c (parse_descriptions): Skip name tokens
	  containing whitespace, as they are almost never useful as manual
	  page names.
	* man/man1/lexgrog.1 (WHATIS PARSING), docs/NEWS: Document this.

Sun Aug 19 21:00:20 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Skip over .ft font change requests, and the .Vb and
	  .Ve definitions used by pod2man to begin and end verbatim mode.
	  This handles some POD-generated pages better.

Sun Aug 19 20:48:42 BST 2007  Colin Watson  <cjwatson@debian.org>

	Truncate apropos/whatis output to the terminal width by default
	(thanks, Dan Jacobson; Debian bug #411721).

	* lib/linelength.c: New file for terminal line length detection,
	  split out from src/man.c. Unlike the previous implementation, this
	  does its own memoisation rather than requiring explicit
	  initialisation.
	* lib/linelength.h: Prototype get_line_length.
	* lib/Makefile.in: Always compile linelength.c.
	* src/man.c (line_length, store_line_length): Remove.
	  (get_roff_line_length): Use get_line_length.
	  (main): We no longer need to call store_line_length.
	* src/whatis.c (args, long_options, main): New -l/--long option.
	  (usage): Document it.
	  (display): Truncate names and descriptions to fit within the